// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateGroupByQuery should generate valid GraphQL query for empty aggregate operations 1`] = `
"
    query PeopleGroupBy(
      $groupBy: [PersonGroupByInput!]
      $filter: PersonFilterInput
      $orderBy: [PersonOrderByWithGroupByInput!]
      $omitNullValues: Boolean
      $viewId: UUID
    ) {
      peopleGroupBy(
        groupBy: $groupBy
        filter: $filter
        orderBy: $orderBy
        omitNullValues: $omitNullValues
        viewId: $viewId
      ) {
        groupByDimensionValues
      }
    }
  "
`;

exports[`generateGroupByQuery should generate valid GraphQL query for multiple aggregate operations 1`] = `
"
    query OpportunitiesGroupBy(
      $groupBy: [OpportunityGroupByInput!]
      $filter: OpportunityFilterInput
      $orderBy: [OpportunityOrderByWithGroupByInput!]
      $omitNullValues: Boolean
      $viewId: UUID
    ) {
      opportunitiesGroupBy(
        groupBy: $groupBy
        filter: $filter
        orderBy: $orderBy
        omitNullValues: $omitNullValues
        viewId: $viewId
      ) {
        groupByDimensionValues
        totalCount
        sumAmountAmountMicros
        avgAmountAmountMicros
      }
    }
  "
`;

exports[`generateGroupByQuery should generate valid GraphQL query for single aggregate operation 1`] = `
"
    query OpportunitiesGroupBy(
      $groupBy: [OpportunityGroupByInput!]
      $filter: OpportunityFilterInput
      $orderBy: [OpportunityOrderByWithGroupByInput!]
      $omitNullValues: Boolean
      $viewId: UUID
    ) {
      opportunitiesGroupBy(
        groupBy: $groupBy
        filter: $filter
        orderBy: $orderBy
        omitNullValues: $omitNullValues
        viewId: $viewId
      ) {
        groupByDimensionValues
        sumAmountAmountMicros
      }
    }
  "
`;
